--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.14.0",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.29.3",
