--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "superjson": "1.12.2",
+    "use-debounce": "^9.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
