--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "contentful": "^10.1.0",
     "dayjs": "^1.11.7",
     "next": "^13.2.4",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
